[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logsift"
version = "0.1.0"
description = "Parse, filter, and analyze log files from the command line"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "noiseparser", email = "noiseparser@gmail.com" },
]
keywords = ["logs", "cli", "parsing", "apache", "nginx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/noiseparser/logsift"
Issues = "https://github.com/noiseparser/logsift/issues"

[project.scripts]
logsift = "logsift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
